# kito

./: .gitignore  README.md  claude.md  index.html  jest.config.js  package-lock.json  package.json  pyproject.toml  test.html
.claude/: codebase.md  instructions.md  settings.json
.devcontainer/: README.md  devcontainer.json
.github/workflows/: fetch-feeds.yml  lint.yml  test.yml
__tests__/: README.md  feeds.test.js  setup.js  state.test.js  utils.test.js  widgets.test.js
config/: feed-pages.yaml
css/: styles.css
data/: ball.json  feed.json  news.json  sidebar.json
js/: app.js
