[project]
name = "personal-newsfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["scripts"]
